# Sazinka

./: .cursorrules  .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .sops.yaml  .trivyignore  AI_LOG.MD  IMPORT_FORMAT.MD  INBOX_UI_CHANGES.md  Makefile  PRJ_BUGS.MD  PRJ_CONTEXT.MD  PRJ_DATA.MD  PRJ_DEVICES.MD  PRJ_DEVOPS.MD  PRJ_EXT_SERVICES.MD  PRJ_I18N.MD  PRJ_IMPORT.MD  PRJ_JOBS.MD  PRJ_MULTIUSER.MD  PRJ_PLAN.MD  PRJ_PLAN_COLUMN_FILTERS.MD  PRJ_PROCESSES.MD  PRJ_ROADMAP.MD  PRJ_RULES.MD  PRJ_RUST.MD  PRJ_SECURITY.MD  PRJ_SITE.MD  PRJ_SOLVER.MD  PRJ_UX.MD  PROJECT_CONTEXT.MD  PROJECT_DATA.MD  PROJECT_DEVOPS.MD  PROJECT_IMPORT.MD  PROJECT_MULTIUSER.MD  PROJECT_ROADMAP.MD  PROJECT_RULES.MD  PROJECT_SITE.MD  PROJECT_SOLVER.MD  (+11 more)
worker/: .env.example  Cargo.toml  Dockerfile
worker/.cargo/: audit.toml
worker/.sqlx/: query-00c6e95330b1b8838d1130d622000e8c3e5a9ddd052addf98661c99e303309ac.json  query-03bc076f4791ec6ec3621c0fab823047b7bf53d300344601a5f390873f43daa0.json  query-08cfa2fb689c74484e5efd22bdfa36c0c67e0ad9590418c5b509201c1df6414b.json  query-0f8c9b4fb5c571741b0464694a818f369637fd2b4233890585aea53d8000acbe.json  query-22be01a3216c1ae0062befba068f407e4485cfd6628452d579f9328d86ac46b9.json  query-2b645a4b26b6dadf011e95f3685d87ca8e1ecd108eece40e405368306f072d45.json  query-33d461ccddd684c8fc27dcf743be07d299032680b19f0a87fa30aecdd990cf47.json  query-58192c49e74e067b40ef64099121f52c0c5bcade2617ea26d079523f18c37597.json  query-6ed19247f124ec59724c9d2c0a6122393fb60e6d1af8428dab740f90bdc18829.json  query-a72ff5c4b1632339955dd6f4e24cbc4ce14e8580d3dc3d8112c2c1a1fc97acda.json  query-c88375401477930cfcecf5c062bd3c242f58004343258bcbedf461a5f54a486d.json  query-db2a7da007eed0788e91c8a8cefd236923d9d046066de6ed61fbd4e65ee5aaa0.json  query-f72c0d55eb997225cc1f38b13ffb70e99d20c15de6cd7e973452549920789b69.json
worker/migrations/: 001_initial_schema.sql  002_add_auth_fields.sql  003_add_user_preferences.sql  004_add_crew_buffer.sql  005_fix_crew_buffer_type.sql  006_add_route_depot.sql  007_add_break_settings.sql  008_break_default_duration_45.sql  009_break_default_enabled_true.sql  010_add_customer_anonymization_fields.sql  011_add_return_to_depot_columns.sql  012_add_planning_indexes.sql  013_add_stop_service_duration.sql  014_add_crew_fixed_buffer.sql  015_add_rbac.sql  016_add_email_templates_v2.sql  017_add_user_locale.sql  018_add_company_locale.sql  019_add_email_template_edited_at.sql  020_tenants.sql  021_device_type_configs.sql  022_countries.sql  023_add_email_verification.sql  024_add_country_waitlist.sql  025_add_onboarding_progress.sql  026_add_db_roles.sql  027_backfill_initial_revisions.sql  028_add_customer_lifecycle_fields.sql  029_create_action_enums.sql  030_create_action_targets.sql  031_create_planned_actions.sql  032_backfill_planned_actions.sql  033_create_scoring_tables.sql  034_drop_legacy_snooze_followup.sql  035_create_tasks.sql  036_migrate_revisions_to_tasks.sql  037_drop_planned_action_legacy_columns.sql  038_seed_default_scoring_profiles.sql  039_fix_lifecycle_rank_weight.sql  040_user_email_domains.sql  (+11 more)
worker/src/: admin.rs  auth.rs  cli.rs  config.rs  defaults.rs  main.rs
worker/src/db/: mod.rs
worker/src/handlers/: admin.rs  auth.rs  communication.rs  crew.rs  customer.rs  device.rs  device_type_config.rs  export.rs  geocode.rs  import.rs  import_processors.rs  import_tests.rs  inbox.rs  jobs.rs  mod.rs  note.rs  onboarding.rs  ping.rs  planned_action.rs  revision.rs  role.rs  route.rs  scoring.rs  settings.rs  slots.rs  task.rs  vehicle.rs  visit.rs  work_item.rs
worker/src/services/: cancellation.rs  domain_verification.rs  email_data.rs  email_processor.rs  email_sender.rs  email_templates.rs  export_processor.rs  geo.rs  geocoding.rs  import_processor.rs  insertion.rs  job_history.rs  mod.rs  nominatim.rs  rate_limiter.rs  scoring.rs  sequential_schedule.rs  slot_suggester.rs  sms_processor.rs  template_renderer.rs  valhalla_processor.rs  vrptw.rs
worker/src/types/: action_target.rs  communication.rs  country.rs  crew.rs  customer.rs  job.rs  (+21 more)
(+788 files in other folders)
