[package]
name = "sazinka-worker"
version = "0.1.0"
edition = "2021"
authors = ["Sazinka Team"]
description = "Backend worker for Sazinka CRM"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"

# NATS client
async-nats = "0.38"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# ZIP handling
zip = "2.2"
base64 = "0.22"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async trait support
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Configuration
dotenvy = "0.15"

# CLI
clap = { version = "4", features = ["derive"] }
rpassword = "7"

# HTTP client (for Nominatim/Valhalla) - using native-tls to avoid ring compilation
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
urlencoding = "2.1"

# VRP solver: using simple nearest-neighbor heuristic for now
vrp-pragmatic = "1.25"
vrp-cli = "1.25"
vrp-core = "1.25"

# Authentication
argon2 = "0.5"
jsonwebtoken = "9"

# Crypto (email verification tokens)
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# Concurrency utilities
parking_lot = "0.12"
lazy_static = "1.5"
tokio-util = "0.7"
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
